syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

message DagMessage {
  bytes id = 1;
  int32 version = 2;
  string type = 3;
  Signature sig = 4;
  bytes payload = 5;
  repeated bytes parentIds = 6;
  google.protobuf.Timestamp timestamp = 7;
  uint64 sequence = 8;
}

message Signature {
  bytes pubKey = 1;
  bytes signature = 2;
}